group of pathes

--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -32,6 +32,7 @@
 
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Определение}
+\newtheorem{notation}[theorem]{Обозначение}
 
 % Redefine margins and other page formatting
 
