--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -16,7 +16,7 @@
 \usepackage{epigraph}
 
 \usepackage{tikz}
-\usetikzlibrary{arrows}
+\usetikzlibrary{arrows,positioning}
 \tikzset{
   treenode/.style = {align=center, inner sep=0pt, text centered,
     font=\sffamily},
