--- a/report/sty/rac.sty
+++ b/report/sty/rac.sty
@@ -516,36 +516,36 @@
 \let\endthebibliography=\endlist
 \def\startbibliography{ }
 
-\newenvironment{code}[1][]{
-\ttfamily\obeylines\obeyspaces\frenchspacing\normalsize%
-
-\def\abstract{\textbf{abstract}}
-\def\catch{\textbf{catch}}
-\def\class{\textbf{class}}
-\def\extends{\textbf{extends}}
-\def\final{\textbf{final}}
-\def\implements{\textbf{implements}}
-\def\interface{\textbf{interface}}
-\def\new{\textbf{new}}
-\def\null{\textbf{null}}
-\def\private{\textbf{private}}
-\def\protected{\textbf{protected}}
-\def\public{\textbf{public}}
-\def\return{\textbf{return}}
-\def\static{\textbf{static}}
-\def\super{\textbf{super}}
-\def\this{\textbf{this}}
-\def\try{\textbf{try}}
-\def\void{\textbf{void}}
-
-\vspace{5mm}
-}
+%\newenvironment{code}[1][]{
+%\ttfamily\obeylines\obeyspaces\frenchspacing\normalsize%
+%
+%\def\abstract{\textbf{abstract}}
+%\def\catch{\textbf{catch}}
+%\def\class{\textbf{class}}
+%\def\extends{\textbf{extends}}
+%\def\final{\textbf{final}}
+%\def\implements{\textbf{implements}}
+%\def\interface{\textbf{interface}}
+%\def\new{\textbf{new}}
+%\def\null{\textbf{null}}
+%\def\private{\textbf{private}}
+%\def\protected{\textbf{protected}}
+%\def\public{\textbf{public}}
+%\def\return{\textbf{return}}
+%\def\static{\textbf{static}}
+%\def\super{\textbf{super}}
+%\def\this{\textbf{this}}
+%\def\try{\textbf{try}}
+%\def\void{\textbf{void}}
+%
+%\vspace{5mm}
+%}
 {
 \vspace{5mm}
 }
 
-
-%Additional 
-
-\def\code#1{\b\t{\hbox{#1}}}
-
+%
+%%Additional 
+%
+%\def\code#1{\b\t{\hbox{#1}}}
+%
