--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -4,6 +4,7 @@
 \usepackage[english,russian]{babel}
 \usepackage[backend=biber,bibencoding=utf8,sorting=none,sortcites=true,bibstyle=sty/gost71,maxnames=99,citestyle=numeric-comp,babel=other]{biblatex}
 \usepackage[utf8]{inputenc}
+\usepackage{textcomp}
 \usepackage{csquotes}
 \usepackage{caption}
 \usepackage{subcaption}
@@ -14,6 +15,7 @@
 \usepackage{sty/dbl12}
 \usepackage{sty/rac}
 \usepackage{epigraph}
+\usepackage{agda}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows,positioning,shapes}
