--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -1,14 +1,19 @@
 \documentclass[a4paper]{report}
 
-\usepackage[T2B]{fontenc}
-\usepackage[english,russian]{babel}
+\usepackage{fontspec}
+\usepackage{polyglossia}
+\setdefaultlanguage[spelling=modern]{russian}
+\setmainfont[Ligatures=TeX]{Linux Libertine O}
+\newfontfamily\cyrillicfontsf{Linux Libertine O}
+\newfontfamily\cyrillicfonttt{Linux Libertine O}
+
 \usepackage[backend=biber,bibencoding=utf8,sorting=none,sortcites=true,bibstyle=sty/gost71,maxnames=99,citestyle=numeric-comp,babel=other]{biblatex}
-\usepackage[utf8]{inputenc}
+%\usepackage[utf8]{inputenc}
 \usepackage{textcomp}
 \usepackage{csquotes}
 \usepackage{caption}
 \usepackage{subcaption}
-\usepackage[pdftex]{graphicx}
+%\usepackage[pdftex]{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
