--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -3,9 +3,10 @@
 \usepackage{fontspec}
 \usepackage{polyglossia}
 \setdefaultlanguage[spelling=modern]{russian}
-\setmainfont[Ligatures=TeX]{Linux Libertine O}
-\newfontfamily\cyrillicfontsf{Linux Libertine O}
-\newfontfamily\cyrillicfonttt{Linux Libertine O}
+\setotherlanguage{english}
+\setmainfont[Ligatures=TeX]{FreeSerif}
+\newfontfamily\cyrillicfontsf{FreeSerif}
+\newfontfamily\cyrillicfonttt{FreeSerif}
 
 \usepackage[backend=biber,bibencoding=utf8,sorting=none,sortcites=true,bibstyle=sty/gost71,maxnames=99,citestyle=numeric-comp,babel=other]{biblatex}
 %\usepackage[utf8]{inputenc}
@@ -104,6 +105,8 @@
 \input{chapters/chapter2.tex}
 \input{chapters/chapter3.tex}
 \input{chapters/outro.tex}
+
+лялля ∷ ололо
 
 \printbibliography
 
