--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -6,6 +6,7 @@
 \setotherlanguage{english}
 \setmainfont[Ligatures=TeX]{FreeSerif}
 \newfontfamily\cyrillicfontsf{FreeSerif}
+\newfontfamily\cyrillicfontit{FreeSerif}
 \newfontfamily\cyrillicfonttt{FreeSerif}
 
 \usepackage[backend=biber,bibencoding=utf8,sorting=none,sortcites=true,bibstyle=sty/gost71,maxnames=99,citestyle=numeric-comp,babel=other]{biblatex}
