--- a/slides2/src/vec.tex
+++ b/slides2/src/vec.tex
@@ -2,7 +2,7 @@
 \newcommand{\vect}[2]{\node[vecpatch-t]
 {\begin{tabular}{l}$#1$\\$#2$\\\end{tabular}};}
 
-\begin{frame}[fragile]{Вектора, неконфликтующее объединение}
+\begin{frame}[fragile]{Вектора, объединения}
   \begin{columns}[T]
     \begin{column}{0.45\textwidth}
       \begin{figure}
