--- a/slides2/src/vec.tex
+++ b/slides2/src/vec.tex
@@ -1,10 +1,6 @@
-\newcommand{\vecf}[0]{\node[vecpatch-f] {};}
-\newcommand{\vect}[2]{\node[vecpatch-t]
-{\begin{tabular}{l}$#1$\\$#2$\\\end{tabular}};}
-
 \begin{frame}[fragile]{Вектора, объединения}
   \begin{columns}[T]
-    \begin{column}{0.45\textwidth}
+    \begin{column}{0.5\textwidth}
       \begin{figure}
         \centering
         \begin{tikzpicture}
@@ -28,7 +24,9 @@
       \end{figure}
     \end{column}
 
-    \begin{column}{0.45\textwidth}
+    \vrule
+
+    \begin{column}{0.5\textwidth}
       \begin{figure}
         \centering
         \begin{tikzpicture}
