--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -1,5 +1,7 @@
 \documentclass[14pt]{beamer}
 \usepackage[utf8]{inputenc}
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage[english,russian]{babel}
 \hypersetup{colorlinks=true, urlcolor=blue}
 \usepackage{xcolor}
