--- a/slides2/src/trees.tex
+++ b/slides2/src/trees.tex
@@ -43,7 +43,7 @@
           \path[draw,-latex,very thick] (tt) -- (tr);
           
           \node[treev,font=\small,below left=of tr] (from2) {e};
-          \node[right=4mm of from2] (to2) {};
+          \node[right=4mm of from2] (to2) {$\varepsilon$};
           \path[draw, -latex, very thick] (from2) -- (to2);
 
           \node[outer sep=0,fit=(from2)(to2),draw=black] (patch2){};
