--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -33,7 +33,9 @@
 \tikzset{vecpatch-op/.style={font=\large}}
 \tikzset{vecpatch-form/.style={vecpatch-tiny,fill=patchform}}
 
-\tikzset{treev/.style={draw=black,circle,outer sep=0,minimum height=8mm}}
+\tikzset{treev/.style={draw=black,circle,outer sep=0,minimum
+    height=8mm,very thick}}
+\tikzset{treearr/.style={draw, -latex, very thick}}
 
 \newcommand{\vecfe}[0]{\node[vecpatch-tiny] {};}
 \newcommand{\vecff}[0]{\node[vecpatch-form] {};}
