--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -64,7 +64,8 @@
 \input{src/10-aim.tex}
 \input{src/15-repotypes.tex}
 \input{src/20-form.tex}
-\input{src/trees.tex}
+\input{src/30-trees.tex}
+\input{src/40-form-conflicts.tex}
 \input{src/vec.tex}
 
 \end{document}
