--- a/slides2/src/40-form-conflicts.tex
+++ b/slides2/src/40-form-conflicts.tex
@@ -11,7 +11,7 @@
       {\vecfe & \vecfe & \vecff & \vecff & \vecfe \\};
     \end{tikzpicture} совместны
     \begin{itemize}
-    \item Вместе~--- 
+    \item Объединение~--- 
       \begin{tikzpicture}\matrix 
         {\vecfe & \vecff & \vecff & \vecff & \vecff \\};
       \end{tikzpicture}
