move vec to 50-vec-ops

--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -66,6 +66,6 @@
 \input{src/20-form.tex}
 \input{src/30-trees.tex}
 \input{src/40-form-conflicts.tex}
-\input{src/vec.tex}
+\input{src/50-vec-ops.tex}
 
 \end{document}
