remove footer from first slide

--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -53,6 +53,8 @@
 
 \begin{document}
 
+{
+\setbeamertemplate{footline}{} 
 \begin{frame}
   \maketitle
 
@@ -60,6 +62,7 @@
     Научный руководитель: Малаховски Я. М.
   \end{flushright}
 \end{frame}
+}
 
 \input{src/10-aim.tex}
 \input{src/15-repotypes.tex}
