--- a/slides2/src/20-form.tex
+++ b/slides2/src/20-form.tex
@@ -1,4 +1,4 @@
-\begin{frame}[fragile]{\emph{Форма} патча}
+\begin{frame}[fragile]{Форма патча}
   \begin{itemize}
   \item Патч~--- преобразование хранимого в репозитории: 
     \begin{itemize}
