tree operations stub

--- a/slides2/src/50-vec-ops.tex
+++ b/slides2/src/50-vec-ops.tex
@@ -50,6 +50,13 @@
       \end{figure}
     \end{column}
   \end{columns}
+\end{frame}
 
+\begin{frame}{Деревья, объединение}
+  \begin{itemize}
+  \item Надо ли этот слайд?
+  \item Представьте себе здесь аналогичную прошлому слайду картинку
+    для деревьев
+  \end{itemize}
 \end{frame}
 
