--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -70,5 +70,6 @@
 \input{src/30-trees.tex}
 \input{src/40-form-conflicts.tex}
 \input{src/50-vec-ops.tex}
+\input{src/60-equiv.tex}
 
 \end{document}
