--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -71,5 +71,8 @@
 \input{src/40-form-conflicts.tex}
 \input{src/50-vec-ops.tex}
 \input{src/60-equiv.tex}
+\input{src/65-equiv-prop.tex}
+\input{src/90-conclusion.tex}
+\input{src/99-questions.tex}
 
 \end{document}
