--- a/slides2/src/65-equiv-prop.tex
+++ b/slides2/src/65-equiv-prop.tex
@@ -17,8 +17,8 @@
   \item Что-то, издалека похожее на дистрибутивность $\wedge$ и $\ggg$:
     \begin{itemize}
     \item Пусть $c = c' \wedge c''$
-    \item Тогда $(a \ggg c') \wedge (b \ggg c'') \longleftrightarrow
-      (a \wedge b) \ggg c$
+    \item Тогда $(a \wedge b) \ggg c \longleftrightarrow (a \ggg c')
+      \wedge (b \ggg c'') $
     \end{itemize}
   \end{itemize}
   
