apply slides2.patch

--- a/slides2/src/10-aim.tex
+++ b/slides2/src/10-aim.tex
@@ -1,11 +1,16 @@
 \begin{frame}{Цель}
+  \begin{block}{Глобальная}
   \begin{itemize}
-  \item Сделать <<каркас>> системы контроля версий
-    \begin{itemize}
-    \item Что хранится?
-    \item Какие операции?
-    \end{itemize}
-  \item Доказать свойства операций
-  \item Подумать, как можно обобщить
+  \item Реализовать формальный <<каркас>> системы контроля версий
+  \item на <<логицистическом>> аппарате.
+  \item Доказать его свойства.
   \end{itemize}
+  \end{block}
+
+  \begin{block}{Этой работы}
+  \begin{itemize}
+  \item Формализовать несколько частных случаев этого аппарата.
+  \item Доказать какие-то свойства.
+  \end{itemize}
+  \end{block}
 \end{frame}
