--- a/slides2/src/15-repotypes.tex
+++ b/slides2/src/15-repotypes.tex
@@ -1,6 +1,4 @@
-\begin{frame}[fragile]{Что хранится в репозитории?}
-  Было рассмотрено два варианта:
-
+\begin{frame}[fragile]{Версионируемые структуры данных}
   \begin{columns}[b]
     \begin{column}{0.45\textwidth}
       \begin{figure}
@@ -32,5 +30,4 @@
       \end{figure}
     \end{column}
   \end{columns}
-
 \end{frame}
