--- a/slides2/src/20-form.tex
+++ b/slides2/src/20-form.tex
@@ -1,21 +1,15 @@
-\begin{frame}[fragile]{Форма патча}
+\begin{frame}[fragile]{Патч для векторов}
   \begin{itemize}
-  \item Патч~--- преобразование хранимого в репозитории: 
-    \begin{itemize}
-    \item 
-      \begin{tikzpicture}[anchor=center]
-        \matrix [draw=red] 
-        {\vecf & \vect{a}{b} & \vecf & \vecf       & \vect{z}{y} \\};
-      \end{tikzpicture}~--- заменить $a$ на второй позиции на $b$, $z$
-      на пятой~--- на $y$.
-    \end{itemize}
-  \item \emph{Форма патча}~--- что он меняет:
-    \begin{itemize}
-    \item
-      \begin{tikzpicture}
-        \matrix 
-        {\vecfe & \vecff & \vecfe & \vecfe & \vecff \\};
-      \end{tikzpicture}
-    \end{itemize}
+  \item Патч:
+     \begin{tikzpicture}[anchor=center]
+       \matrix [draw=red]
+       {\vecf & \vect{a}{b} & \vecf & \vecf       & \vect{z}{y} \\};
+     \end{tikzpicture}~--- заменить $a$ на второй позиции на $b$, $z$
+     на пятой~--- на $y$.
+  \item \emph{Форма патча}~--- места вектора, которые он меняет:
+     \begin{tikzpicture}
+       \matrix
+       {\vecfe & \vecff & \vecfe & \vecfe & \vecff \\};
+     \end{tikzpicture}
   \end{itemize}
 \end{frame}
