--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -47,7 +47,7 @@
 {\begin{tabular}{l}$#1$\\$#2$\\\end{tabular}};}
 
 \title{Аксиоматизация системы контроля версий в формализме зависимых типов}
-\author{Андрей Комаров, гр. 4538}
+\author{Андрей Комаров}
 \institute{НИУ ИТМО}
 \date{\today}
 
@@ -64,10 +64,13 @@
 \end{frame}
 }
 
+\input{src/08-defs.tex}
+\input{src/09-known.tex}
 \input{src/10-aim.tex}
 \input{src/15-repotypes.tex}
 \input{src/20-form.tex}
-\input{src/30-trees.tex}
+%у меня этот слайд не компилиться
+%\input{src/30-trees.tex}
 \input{src/40-form-conflicts.tex}
 \input{src/50-vec-ops.tex}
 \input{src/60-equiv.tex}
