--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -70,12 +70,14 @@
 \input{src/15-repotypes.tex}
 \input{src/20-form.tex}
 %у меня этот слайд не компилиться
-%\input{src/30-trees.tex}
+%%а что говорит?
+\input{src/30-trees.tex}
 \input{src/40-form-conflicts.tex}
 \input{src/50-vec-ops.tex}
+\input{src/55-tree-ops.tex}
 \input{src/60-equiv.tex}
 \input{src/65-equiv-prop.tex}
-\input{src/90-conclusion.tex}
+%\input{src/90-conclusion.tex}
 \input{src/99-questions.tex}
 
 \end{document}
