--- a/slides2/src/30-trees.tex
+++ b/slides2/src/30-trees.tex
@@ -1,4 +1,4 @@
-\begin{frame}[fragile]{Патчи для деревьев и их форма}
+\begin{frame}[fragile]{Патч для деревьев}
   
   \begin{tikzpicture}
     \node[treev,font=\small] (from) {$A$};
