--- a/slides2/src/08-defs.tex
+++ b/slides2/src/08-defs.tex
@@ -2,6 +2,7 @@
 \begin{description}
 \item[Ревизия] фиксированное состояние некоторой структуры данных.
 \item[Патч] преобразование между двумя ревизиями.
-\item[Система контроля версий (VCS)] структура данных хранящая согласованные наборы патчей и её пользовательский интерфейс.
+\item[Система контроля версий (VCS)] структура данных, хранящая
+  согласованные наборы патчей и её пользовательский интерфейс.
 \end{description}
 \end{frame}
