some citations added

--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -15,6 +15,13 @@
   url =          {http://projects.haskell.org/camp}
 }
 
+@Online{git,
+  author =       {Torvalds, Linus},
+  title =        {Git Version Control System},
+  year =         2005,
+  url =          {http://gitscm.com/}
+}
+
 @Book{progit,
   author =       {Chacon, Scott},
   title =        {Pro Git},
@@ -23,4 +30,16 @@
   edition =      {1st},
   publisher =    {Apress},
   address =      {Berkely, CA, USA},
+}
+
+@Online{agda,
+  author =       {Norell, Ulf},
+  title =        {Agda Dependently Typed Programming Language},
+  year =         2006,
+  url =          {http://wiki.portal.chalmers.se/agda/}
+}
+
+@Online{coq,
+  title =        {The Coq Proof Assistant},
+  url =          {http://coq.inria.fr/}
 }
