--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -47,7 +47,7 @@
 \binoppenalty=10000
 \relpenalty=10000
 
-\addbibresource{report.bib}
+\addbibresource{thesis.bib}
 
 \defbibenvironment{bibliography} {\list
   {\printfield[labelnumberwidth]{labelnumber}.}
