--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -43,3 +43,49 @@
   title =        {The Coq Proof Assistant},
   url =          {http://coq.inria.fr/}
 }
+
+@Book{svnbook,
+  title =        {Version control with subversion},
+  author =       {Pilato, C Michael and Collins-Sussman, Ben and
+                  Fitzpatrick, Brian W},
+  year =         2008,
+  publisher =    {O'Reilly Media, Inc.}
+}
+
+@Online{mercurial,
+  author =       {Mackall, Matt},
+  title =        {Mercurial SCM},
+  year =         2005,
+  url =          {http://mercurial.selenic.com/}
+}
+
+@Online{cvs,
+  author =       {Grune, Dick},
+  title =        {Concurrent Versions Systems},
+  year =         1986,
+  url =          {http://savannah.nongnu.org/projects/cvs}
+}
+
+@MISC{curryhoward,
+  author =       {Morten Heine B. Sørensen and Pawel Urzyczyn},
+  title =        {Lectures on the Curry-Howard Isomorphism},
+  year =         1998
+}
+
+@book{шень2,
+  title =        {Часть 2: Языки и исчисления},
+  author =       {Верещагин, Н.К. and Шень, А.},
+  isbn =         9785940573227,
+  series =       {Современные лекционные курсы},
+  url =          {http://www.mccme.ru/free-books/},
+  year =         2008,
+  publisher =    {Изд-во МЦНМО}
+}
+
+@book{mltt,
+  title =        {Intuitionistic type theory},
+  author =       {Martin-Löf, Per and Sambin, Giovanni},
+  volume =       17,
+  year =         1984,
+  publisher =    {Bibliopolis Naples}
+}
