--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -104,7 +104,7 @@
 \input{chapters/intro.tex}
 \input{chapters/chapter1.tex}
 \input{chapters/chapter2.tex}
-\input{chapters/chapter3.tex}
+%\input{chapters/chapter3.tex}
 \input{chapters/outro.tex}
 
 \printbibliography
