--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -65,8 +65,7 @@
 \pagestyle{title}
 
 \begin{center}
-  Санкт Петербургский национальный исследовательский университет\\
-  информационных технологий механики и оптики\\
+  Университет ИТМО \\
   \hrulefill
  
 \vspace{2cm}
