--- a/report/agda.sty
+++ b/report/agda.sty
@@ -51,7 +51,8 @@
 \newcommand{\AgdaCommentFontStyle}[1]{\texttt{#1}}
 
 % Bounded variables font style.
-\newcommand{\AgdaBoundFontStyle}[1]{\textit{#1}}
+%\newcommand{\AgdaBoundFontStyle}[1]{\textit{#1}}
+\newcommand{\AgdaBoundFontStyle}[1]{\textsf{#1}}
 
 % ----------------------------------------------------------------------
 % Colours.
