--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -4,10 +4,11 @@
 \usepackage{polyglossia}
 \setdefaultlanguage[spelling=modern]{russian}
 \setotherlanguage{english}
-\setmainfont[Ligatures=TeX]{FreeSerif}
-\newfontfamily\cyrillicfontsf{FreeSerif}
-\newfontfamily\cyrillicfontit{FreeSerif}
-\newfontfamily\cyrillicfonttt{FreeSerif}
+\newcommand{\myfont}[0]{XITS}
+\setmainfont[Ligatures=TeX]{\myfont}
+\newfontfamily\cyrillicfontsf{\myfont}
+\newfontfamily\cyrillicfontit{\myfont}
+\newfontfamily\cyrillicfonttt{\myfont}
 
 \usepackage[backend=biber,bibencoding=utf8,sorting=none,sortcites=true,bibstyle=sty/gost71,maxnames=99,citestyle=numeric-comp,babel=other]{biblatex}
 %\usepackage[utf8]{inputenc}
