lalala ch2 something changed

--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -5,7 +5,9 @@
 \setdefaultlanguage[spelling=modern]{russian}
 \setotherlanguage{english}
 \newcommand{\myfont}[0]{XITS}
+%\newcommand{\myfont}[0]{Comic Sans MS}
 \setmainfont[Ligatures=TeX]{\myfont}
+\newfontfamily\russianfont{\myfont}
 \newfontfamily\cyrillicfontsf{\myfont}
 \newfontfamily\cyrillicfontit{\myfont}
 \newfontfamily\cyrillicfonttt{\myfont}
@@ -140,7 +142,7 @@
 % Chapters
 \startthechapters
 \input{chapters/intro.tex}
-\input{chapters/chapter1.tex}
+%\input{chapters/chapter1.tex}
 \input{chapters/chapter2.tex}
 %\input{chapters/chapter3.tex}
 \input{chapters/outro.tex}
