--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -89,3 +89,10 @@
   year =         1984,
   publisher =    {Bibliopolis Naples}
 }
+
+@Misc{howard69,
+  author =       {W. A. Howard},
+  title =        {The Formulae-as-Type Notion of Construction},
+  year =         1969,
+  organization = {University of Illinois at Chicago Circle}
+}
