--- a/slides2/src/10-aim.tex
+++ b/slides2/src/10-aim.tex
@@ -9,7 +9,10 @@
 
   \begin{block}{Этой работы}
   \begin{itemize}
-  \item Формализовать несколько частных случаев этого аппарата.
+  \item Формализовать несколько частных случаев этого аппарата
+    \begin{itemize}
+    \item на языке Agda.
+    \end{itemize}
   \item Доказать какие-то свойства.
   \end{itemize}
   \end{block}
