some slides added

--- a/slides2/slides.tex
+++ b/slides2/slides.tex
@@ -67,6 +67,7 @@
 \input{src/08-defs.tex}
 \input{src/09-known.tex}
 \input{src/10-aim.tex}
+\input{src/11-plan.tex}
 \input{src/15-repotypes.tex}
 \input{src/20-form.tex}
 %у меня этот слайд не компилиться
@@ -78,6 +79,7 @@
 \input{src/60-equiv.tex}
 \input{src/65-equiv-prop.tex}
 %\input{src/90-conclusion.tex}
+\input{src/90-results.tex}
 \input{src/99-questions.tex}
 
 \end{document}
