--- a/slides2/src/10-aim.tex
+++ b/slides2/src/10-aim.tex
@@ -13,7 +13,7 @@
     \begin{itemize}
     \item на языке Agda.
     \end{itemize}
-  \item Доказать какие-то свойства.
+  \item Доказать какие-то их свойства.
   \end{itemize}
   \end{block}
 \end{frame}
